--- a/styles.css
+++ b/styles.css
@@ -22,8 +22,16 @@ body {
     line-height: 150%;
 }
 
+#mini-dropdown {
+    display:none;
+}
+
 #aboutme {
     cursor: pointer;
+}
+
+#ham-menu {
+    display:none;
 }
 
 .inside-aside {
@@ -71,7 +79,8 @@ body {
 #name-intro {
     margin-top: 10%;
     margin-right: 5%;
-    /* line-height: 85%; */
+    margin-bottom: 10%;
+    line-height: 85%;
     text-align: right;
     display: flex;
     flex-direction: column;
@@ -79,25 +88,15 @@ body {
 }
 
 #myname {
-    /* width: 13ch;
-    animation: typing 2s steps(13), blink .5s step-end infinite alternate;
-    white-space: nowrap;
-    overflow: hidden; */
+   
     font-size: 50px;
-    animation: typing 6s steps(13) infinite;
-    white-space: nowrap;
-    overflow: hidden;
-    /* transform: translateX(100%); */
-    /* padding-left: 50%; */
+    
 }
 
-@keyframes typing {
-    0% { width: 0ch }
-    30% { width: 13ch;}
-    80% { width: 13ch;}
-    90% {width: 0ch;}
-    100% { width: 0ch;}
-    
+#skills-sec {
+    width: 90%;
+    text-align: center;
+    margin: auto;
 }
 
 
@@ -150,7 +149,9 @@ li {
 
 #projects {
     text-align: center;
-    margin-top: 8%;
+    /* width: 100%;
+    background-color: #4d7953; */
+    /* margin-top: 8%; */
 }
 
 .projectimage {
@@ -178,19 +179,290 @@ li {
     margin: 10% 0;
 }
 
+#whitespace {
+    height: 200px;
+}
+
 footer {
     text-align: center;
     color: #fff;
-    background-color: #2e5033;
+    background-color: #4d7953;
     position:absolute;
-    width: 100%; 
+    width: 100%;
+    height: 15%;
 
 } 
 
+#footer-content {
+    width: 70%;
+    margin: auto;
+}
+
 #namelink {
+    text-decoration: none;
+    color: #84da90
+}
+
+#namelink:hover {
+    color: #c0f1c7;
+}
+
+#contact-icons {
+    display:none;
+
+} 
+
+#mail-link {
+    color: #4d7953;
     text-decoration: none;
 }
 
-#namelink:visited {
-    color: #84da90;
+#mail-link:hover {
+    color: #84da90
+}
+
+
+@media only screen and (max-width: 1024px) {
+    body {
+        /* background-color: aqua; */
+    }
+
+    footer {
+        position: absolute;
+    }
+}
+
+
+@media only screen and (max-width: 800px) {
+    body {
+        /* background-color: aquamarine; */
+    }
+
+    #icondiv {
+        text-align: left;
+        margin-top: 2%;
+        margin-left: 4%;
+        width: 55%;
+        float: left;
+    }
+
+    .iconsection {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-row: 1fr 1fr 1fr;
+    }
+    
+    .iconsection-2 {
+        margin-top: 3%;
+    }
+    
+    .iconimage {
+        width: 8%;
+        margin: 3%;
+    }
+
+    #name-intro {
+        margin-bottom: 10%;
+    }
+
+    
+
+    #projects {
+        width: 95%;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        text-align: center;
+        margin:auto;
+    }
+
+    .projectimage {
+        width: 90%;
+        margin: 2% auto;
+        opacity: 70%;
+        border-radius: 5px;
+    
+    }
+
+}
+
+@media only screen and (max-width: 641px) {
+    body {
+        background-color: #fff;
+    }
+
+    #ham-menu {
+        position: fixed;
+        top: 0;
+        right:0;
+        display: block;
+        float:right;
+        margin: 2%;
+        cursor: pointer;
+        width: 8%;
+        
+    }
+
+    #mini-dropdown {
+        display: block;
+    }
+
+    #contact-list {
+        display: none;
+    }
+
+    #name-intro {
+        text-align: left;
+        /* margin-top: 10%;
+        margin-right: 5%;
+        line-height: 85%;
+        text-align: right;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+        margin-bottom: 10%; */
+    }
+    
+    #myname {
+       
+        font-size: 30px;
+        
+    }
+
+   #skills-sec {
+       margin-top: 10%;
+   }
+
+    #icondiv {
+        display: none;
+        text-align: left;
+        margin-top: 2%;
+        margin-left: 4%;
+        width: 80%;
+        float: left;
+    }
+
+    .iconsection {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-row: 1fr 1fr 1fr;
+    }
+
+    .iconimage {
+        width: 8%;
+        margin: 3%;
+    }
+    
+    .hoverimage:hover {
+        transform: scale(1.2);
+        transition: 0.4s ease-in-out;
+    }
+
+    #text-body {
+        clear:right;
+    }
+
+    #projects {
+        width: 95%;
+        display: grid;
+        grid-template-columns: 1fr;
+        text-align: center;
+        margin:auto;
+    }
+
+    .projectimage {
+        width: 90%;
+        margin: 2% auto;
+        opacity: 70%;
+        border-radius: 5px;
+    
+    }
+
+
+    #mini-dropdown {
+        background-color: #4d7953;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        top: 0;
+        opacity: 0;
+        overflow-y: scroll;
+        /* padding: 15px 30px; */
+        position: fixed;
+        transition: all 0.35s ease-in-out;
+        transform: translateY(-100%);
+        z-index: 10;
+    }
+    
+    #mini-dropdown.toggle-open {
+        transform: translateY(0%);
+        opacity: 1;
+    }
+
+    #minilist {
+        width: 90%;
+        clear: right;
+       margin: auto;
+       text-align: center;
+    }
+
+    .mini-items {
+        color: #fff;
+        margin: 10%;
+        font-size: 30px;
+        text-decoration: none;
+        align-items: center;
+    }
+
+    .link-list {
+        text-decoration: none;
+        color: #fff;
+    }
+
+    .link-list:visited {
+        color: #fff;
+    } 
+
+    #exit-mini {
+        width:10%;
+        float: right;
+        margin: 5%;
+    }
+
+    #namelink-about {
+        color: #84da90;
+    }
+
+    #namelink-about:hover {
+        color: #c0f1c7;
+    }
+
+    #contact-icons {
+        display:block;
+        margin-bottom: 10%;
+    
+    }
+
+    #footer-info {
+        font-size: 12px;
+    }
+
+    #whitespace {
+        height: 100px;
+    }
+}
+
+@media only screen and (max-width: 300px){
+    body {
+        /* background-color: bisque; */
+    }
+
+    #mynameis {
+        font-size: smaller;
+
+    }
+    #myname {
+       
+        font-size: 20px;
+        
+    }
 }
