--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body {
     font-family: 'Merriweather', serif;
     color:#063b0d;
     margin: 0 auto;
-    
+    /* background-color: #f3faf7; */
 }
 
 #text-body {
@@ -99,6 +99,35 @@ body {
     margin: auto;
 }
 
+#emailProjects {
+    width: 90%;
+    text-align: center;
+    margin: auto;
+    margin-top: 10%;
+}
+
+.skillSetSec {
+    width: 100%;
+    text-align: center;
+    /* margin: auto; */
+    margin-top: 10%;
+    padding-bottom: 10%;
+    padding-top: 5%;
+    background-color: #4d7953;
+    /* border-radius: 10px; */
+    color: #fff;
+    
+}
+
+#skill-item-list {
+    width: 90%;
+    margin: auto;
+    line-height: 5px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+
+
 
 li {
     list-style-type: none;
@@ -154,6 +183,11 @@ li {
     /* margin-top: 8%; */
 }
 
+.link-image {
+   
+    /* box-shadow: 5px 5px 5px rgb(80, 80, 80); */
+}
+
 .projectimage {
     width: 30%;
     margin:1%;
@@ -180,7 +214,7 @@ li {
 }
 
 #whitespace {
-    height: 200px;
+    /* height: 200px; */
 }
 
 footer {
@@ -282,6 +316,14 @@ footer {
         border-radius: 5px;
         
     }
+
+    #skill-item-list {
+        margin-top: 5%;
+        line-height: 5px;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+    
 
 
 }
@@ -447,9 +489,18 @@ footer {
         font-size: 12px;
     }
 
-    #whitespace {
+    /* #whitespace {
         height: 100px;
+    } */
+
+    #skill-item-list {
+        margin-top: 5%;
+        margin-bottom: 5%;
+        line-height: normal;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
     }
+    
 }
 
 @media only screen and (max-width: 300px){
@@ -466,4 +517,13 @@ footer {
         font-size: 20px;
         
     }
+
+    #skill-item-list {
+        margin-top: 5%;
+        font-size: 10px;
+        line-height: 10px;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+    
 }
